--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "socket.io": "^4.8.1"
   }
 }
